find bugs fixes