@@ -91,7 +91,7 @@ public class Locator implements PartitionNotification, AnubisLocator {
 
     @Deployed
     public void deployed() {
-        me = new Integer(identity.id);
+        me = Integer.valueOf(identity.id);
         maxTransDelay = heartbeatTimeout * heartbeatInterval;
         timers = new ActiveTimeQueue("Anubis: Locator timers (node " + me + ")");
         global = new GlobalRegisterImpl(identity, this);
@@ -227,7 +227,7 @@ public class Locator implements PartitionNotification, AnubisLocator {
          * leader holds the active global register.
          */
         stable = view.isStable();
-        this.leader = new Integer(leader);
+        this.leader = Integer.valueOf(leader);
 
         /**
          * The view will only be the same or larger when a stable report is
