@@ -97,7 +97,7 @@ public class LocalRegisterImpl {
         }
     }
 
-    private class UserListenerRequest {
+    private static class UserListenerRequest {
         public final static int Deregister = 2;
         public final static int Register = 1;
         @SuppressWarnings("unused")
@@ -111,7 +111,7 @@ public class LocalRegisterImpl {
         }
     }
 
-    private class UserProviderRequest {
+    private static class UserProviderRequest {
         public final static int Deregister = 2;
         public final static int NewValue = 3;
         public final static int Register = 1;
@@ -131,7 +131,7 @@ public class LocalRegisterImpl {
         }
     }
 
-    private class UserStabilityRequest {
+    private static class UserStabilityRequest {
         public final static int Deregister = 2;
         public final static int Register = 1;
         @SuppressWarnings("unused")
@@ -162,7 +162,7 @@ public class LocalRegisterImpl {
 
     public LocalRegisterImpl(Identity id, Locator locator) {
         me = id;
-        node = new Integer(me.id);
+        node = Integer.valueOf(me.id);
         providers = new LocalProviders(locator, node);
         listeners = new LocalListeners(locator, node);
         this.locator = locator;
@@ -444,7 +444,7 @@ public class LocalRegisterImpl {
         updateDebugFrame();
     }
 
-    private void updateDebugFrame() {
+    private synchronized void updateDebugFrame() {
         if (debug != null) {
             debug.update();
         }
